--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/inquirer": "^8.2.0",
+    "@types/lodash": "^4.14.181",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
@@ -25,6 +26,7 @@
     "commander": "^9.1.0",
     "csv-parser": "^3.0.0",
     "inquirer": "^8.2.2",
+    "lodash": "^4.17.21",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8"
   }
